[package]
name = "lnp2pbot-api"
version = "0.1.0"
edition = "2021"
authors = ["Francisco Calderón <fjcalderon@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
mongodb = "2.2.2"
rocket = "0.5.0-rc.2"
serde = "1.0.139"
serde_json = "1.0.82"
