[package]
name = "lnp2pbot-api"
version = "0.1.0"
edition = "2021"
authors = ["Francisco Calderón <fjcalderon@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serde = "1.0.139"
serde_json = "1.0.82"
rocket-governor = "0.1.0-rc.4"

[dependencies.mongodb]
version = "2.2.2"
default-features = false
features = ["sync"]

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

[dependencies.chrono]
chrono = "0.4.19"
features = ["serde"]
